Prevent dragging on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   --hose-height: 300px;
   padding: 0;
   margin: 0;
+  touch-action: none;
 }
 
 a {
